--- a/disclaimer.html
+++ b/disclaimer.html
@@ -144,8 +144,8 @@
                             defend themselves in realworld situations. </p>
                         <div class="space-large"></div>
                         <div class="cta-container">
-                            <a href="./index.#Register" data-w-id="1b7b1925-189d-7b44-6e18-db85ada277ff"
-                                class="cta text-small background-color-purple w-button">Register Now</a>
+                            <a href="./index.html#Register" data-w-id="1b7b1925-189d-7b44-6e18-db85ada277ff"
+                            class="cta text-small background-color-purple w-button">Register Now</a>
                         </div>
                     </div>
                     <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b19-de738b10" class="footer-detail">
