--- a/disclaimer.html
+++ b/disclaimer.html
@@ -74,7 +74,7 @@
                         Our Disclaimer </div>
                     <div class="space-small-xs"></div>
                     <div class="h2-wrapper">
-                        <h2 data-w-id="4e30998c-b5d8-81ce-a704-f3b17f6eaaa2" class="heading-h2">Our<span
+                        <h2 data-w-id="4e30998c-b5d8-81ce-a704-f3b17f6eaaa2" class="heading-h2">Our <span
                                 class="text-color-purple">Disclaimer</span></h2>
                         <div class="xl-outlined-text-warpper location-xl-outlined">
                             <div class="xl-outlined-text">Disclaimer</div>
@@ -135,7 +135,7 @@
             <div class="container w-container">
                 <div class="w-layout-grid footer-grid">
                     <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b14-de738b10" class="footer-detail"><a
-                            data-w-id="9d1109b9-b588-7def-521e-134bde738b15" href="./index.#home"
+                            data-w-id="9d1109b9-b588-7def-521e-134bde738b15" href="./index.html#home"
                             class="footer-image-link w-inline-block"><img src="./assets/images/logo/logo1.png"
                                 loading="lazy" alt="Footer Logo" class="footer-image"></a>
                         <p data-w-id="9d1109b9-b588-7def-521e-134bde738b17" class="paragraph footer-text">
@@ -151,20 +151,6 @@
                     <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b19-de738b10" class="footer-detail">
                         <h6 data-w-id="9d1109b9-b588-7def-521e-134bde738b1a" class="h6-heading footer-heading">
                             Quick Link</h6>
-                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b1e" href="./index.#Coach"
-                            class="paragraph footer-link">Coach</a>
-                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b20" href="./index.#Course"
-                            class="paragraph footer-link">Course</a>
-                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b22" href="./index.#Price"
-                            class="paragraph footer-link">Price</a>
-                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b22" href="./index.#WhyUs"
-                            class="paragraph footer-link">Why Us</a>
-                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b22" href="./index.#Contact"
-                            class="paragraph footer-link">Contact</a>
-                    </div>
-                    <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b19-de738b10" class="footer-detail">
-                        <h6 data-w-id="9d1109b9-b588-7def-521e-134bde738b1a" class="h6-heading footer-heading">
-                            Quick Link</h6>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b1e" href="./index.html#Coach"
                             class="paragraph footer-link">Coach</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b20" href="./index.html#Course"
@@ -175,6 +161,20 @@
                             class="paragraph footer-link">Why Us</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b22" href="./index.html#Contact"
                             class="paragraph footer-link">Contact</a>
+                    </div>
+                    <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b26-de738b10" class="footer-detail">
+                        <h6 data-w-id="9d1109b9-b588-7def-521e-134bde738b27" class="h6-heading footer-heading">
+                            Other</h6>
+                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./terms-conditions.html"
+                            class="paragraph footer-link">Terms & Conditions</a>
+                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./privacy-policy.html"
+                            class="paragraph footer-link">Privacy Policy</a>
+                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./disclaimer.html"
+                            class="paragraph footer-link">Disclaimer</a>
+                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./refund-cancellation.html"
+                            class="paragraph footer-link">Refund & Cancellation</a>
+                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b2d" href="./sitemap.html"
+                            class="paragraph footer-link">Site Map</a>
                     </div>
                     <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b2f-de738b10" class="footer-detail">
                         <h6 data-w-id="9d1109b9-b588-7def-521e-134bde738b30" class="h6-heading footer-heading">
