--- a/sitemap.html
+++ b/sitemap.html
@@ -105,7 +105,7 @@
             <div class="container w-container">
                 <div class="w-layout-grid footer-grid">
                     <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b14-de738b10" class="footer-detail"><a
-                            data-w-id="9d1109b9-b588-7def-521e-134bde738b15" href="./index.#home"
+                            data-w-id="9d1109b9-b588-7def-521e-134bde738b15" href="./index.html#home"
                             class="footer-image-link w-inline-block"><img src="./assets/images/logo/logo1.png"
                                 loading="lazy" alt="Footer Logo" class="footer-image"></a>
                         <p data-w-id="9d1109b9-b588-7def-521e-134bde738b17" class="paragraph footer-text">
