--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
         <div class="padding-large-global-xl">
             <div class="w-layout-vflex flex-vertical-block">
                 <h1 data-w-id="ff574a96-3536-c690-7d66-15448ab93501" class="heading-h1">Fierce &
-                    Fearless<br><span class="text-color-purple">Women’s Self Defense</span> <br> Course</h1>
+                    Fearless<br><span class="text-color-purple">Women’s <br class="heading-space"> Self Defense</span>
+                    <br> Course
+                </h1>
                 <div class="space-small-xs"></div>
                 <div data-w-id="0e17406e-d8e8-7c52-ca4b-0cb5adf5a8ac" class="text-medium text-color-white"><i>Because
                         Strong is the New Safe</i></div>
@@ -243,7 +245,7 @@
                             <div>
                                 Week
                             </div>
-                            <h2 class="text-color-white">5th & 6th Oct 2024</h3>
+                            <h2 class="text-color-white">5th & 6th Oct 2024</h2>
                         </div>
                         <div class="large-number-week text-color-white">
                             1
@@ -297,7 +299,7 @@
                             <div>
                                 Week
                             </div>
-                            <h2 class="text-color-purple">12th & 13th Oct 2024</h3>
+                            <h2 class="text-color-purple">12th & 13th Oct 2024</h2>
                         </div>
                         <div class="large-number-week text-color-purple">
                             2
@@ -346,7 +348,7 @@
                             <div>
                                 Week
                             </div>
-                            <h2 class="text-color-white">19th & 20th Oct 2024</h3>
+                            <h2 class="text-color-white">19th & 20th Oct 2024</h2>
                         </div>
                         <div class="large-number-week text-color-white">
                             3
@@ -399,7 +401,7 @@
                             <div>
                                 Week
                             </div>
-                            <h2 class="text-color-purple">26th & 27th Oct 2024</h3>
+                            <h2 class="text-color-purple">26th & 27th Oct 2024</h2>
                         </div>
                         <div class="large-number-week text-color-purple">
                             4
@@ -452,7 +454,10 @@
                             <div>
                                 Week
                             </div>
-                            <h2 class="text-color-white">2nd Oct to 24th Nov 2024</h3>
+                            <h2 class="text-color-white">2nd Oct to 24th Nov 2024
+                                <br>
+                                Extended Course
+                            </h2>
                         </div>
                         <div class="large-number-week-last text-color-white">
                             <span>5</span> <br> <span class="middle-span">to</span> <br> <span>8</span>
@@ -2434,9 +2439,8 @@
                                 <input type="hidden" name="form_type" value="register">
                                 <input class="input w-input" maxlength="50" name="FullName" placeholder="Full Name"
                                     type="text" id="Full-Name" required="">
-                                <input class="input w-input textbox-n" maxlength="3" name="DateofBirth"
-                                    placeholder="Date of Birth" id="Date" required="" type="text"
-                                    onfocus="(this.type='date')" onblur="(this.type='text')">
+                                <input class="input w-input" maxlength="10" name="DateofBirth"
+                                    placeholder="Date of Birth" id="Date" required="" type="text">
                                 <input class="input w-input" maxlength="60" name="EmailAddress"
                                     placeholder="Email Address" type="email" id="Email-Address" required="">
                                 <input class="input w-input" maxlength="10" name="ContactNumber"
@@ -2828,7 +2832,9 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=661a163a5f85c8b219e84a9e"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="./assets/js/script.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -2839,9 +2845,22 @@
             }
         });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="./assets/js/script.js" type="text/javascript"></script>
+
+    <script>
+        document.getElementById('Date').addEventListener('input', function (e) {
+            let value = e.target.value.replace(/\D/g, '');
+
+            if (value.length > 8) {
+                value = value.slice(0, 8);
+            }
+
+            if (value.length > 2) value = value.slice(0, 2) + '/' + value.slice(2);
+            if (value.length > 5) value = value.slice(0, 5) + '/' + value.slice(5);
+
+            e.target.value = value;
+        });
+    </script>
 </body>
 
 </html>
