--- a/refund-cancellation.html
+++ b/refund-cancellation.html
@@ -13,15 +13,15 @@
         content="Join Barefoot Raipur for specialized women’s self-defense training. Learn essential MMA, boxing, and self-defense techniques to build strength and confidence in a supportive environment.">
     <meta name="keywords"
         content="Women’s self-defense Raipur, Self-defense classes for women, Women’s MMA Raipur, Boxing for women Raipur, Empowerment through self-defense Raipur, Kickboxing for women Raipur, Personal safety for women, Self-defense training Raipur">
-    <meta property="og:image" content="./assets/images/logo/favicon.png">
+    <meta property="og:image" content="./assets/images/logo/favicon.webp">
     <meta property="og:title" content="Barefoot | Refund & Cancellation">
     <meta property="og:description"
         content="Join Barefoot Raipur for specialized women’s self-defense training. Learn essential MMA, boxing, and self-defense techniques to build strength and confidence in a supportive environment.">
     <meta property="og:url" content="https://barefoot.org.in/refund-cancellation.html">
     <meta property="og:site_name" content="Barefoot | Refund & Cancellation">
     <meta property="og:type" content="website">
-    <link href="./assets/images/logo/favicon.png" rel="shortcut icon" type="image/x-icon">
-    <link href="./assets/images/logo/favicon.png" rel="apple-touch-icon">
+    <link href="./assets/images/logo/favicon.webp" rel="shortcut icon" type="image/x-icon">
+    <link href="./assets/images/logo/favicon.webp" rel="apple-touch-icon">
     <link rel="canonical" href="https://barefoot.org.in/refund-cancellation.html">
     <link rel="preload" href="./assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
@@ -45,7 +45,7 @@
     <div data-animation="default" class="navbar-component w-nav" data-easing2="ease" data-easing="ease"
         data-collapse="medium" data-w-id="b5b2d9d7-2af2-6f75-a555-fe5bdc5e6c5c" role="banner" data-duration="400">
         <div class="navbar-container"><a href="./index.html#Hero" class="brand w-nav-brand"><img
-                    src="./assets/images/logo/logo1.png" loading="lazy" alt="barefoot Logo" class="logo"></a>
+                    src="./assets/images/logo/logo1.webp" loading="lazy" alt="barefoot Logo" class="logo"></a>
             <nav role="navigation" class="nav-menu w-nav-menu"><a href="./index.html#Hero"
                     class="nav nav-text-small background-color-dark text-color-white w-nav-link">Home</a>
                 <a href="./index.html#Coach"
@@ -133,7 +133,7 @@
                 <div class="w-layout-grid footer-grid">
                     <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b14-de738b10" class="footer-detail"><a
                             data-w-id="9d1109b9-b588-7def-521e-134bde738b15" href="./index.html#home"
-                            class="footer-image-link w-inline-block"><img src="./assets/images/logo/logo1.png"
+                            class="footer-image-link w-inline-block"><img src="./assets/images/logo/logo1.webp"
                                 loading="lazy" alt="Footer Logo" class="footer-image"></a>
                         <p data-w-id="9d1109b9-b588-7def-521e-134bde738b17" class="paragraph footer-text">
                             This self defense course is designed to empower women by teaching practical techniques
