--- a/course_selection.html
+++ b/course_selection.html
@@ -13,15 +13,15 @@
         content="Join Barefoot Raipur for specialized women’s self-defense training. Learn essential MMA, boxing, and self-defense techniques to build strength and confidence in a supportive environment.">
     <meta name="keywords"
         content="Women’s self-defense Raipur, Self-defense classes for women, Women’s MMA Raipur, Boxing for women Raipur, Empowerment through self-defense Raipur, Kickboxing for women Raipur, Personal safety for women, Self-defense training Raipur">
-    <meta property="og:image" content="./assets/images/logo/favicon.png">
+    <meta property="og:image" content="./assets/images/logo/favicon.webp">
     <meta property="og:title" content="Barefoot | Select Course Payment">
     <meta property="og:description"
         content="Join Barefoot Raipur for specialized women’s self-defense training. Learn essential MMA, boxing, and self-defense techniques to build strength and confidence in a supportive environment.">
     <meta property="og:url" content="https://barefoot.org.in/course_selection.html">
     <meta property="og:site_name" content="Barefoot | Select Course Payment">
     <meta property="og:type" content="website">
-    <link href="./assets/images/logo/favicon.png" rel="shortcut icon" type="image/x-icon">
-    <link href="./assets/images/logo/favicon.png" rel="apple-touch-icon">
+    <link href="./assets/images/logo/favicon.webp" rel="shortcut icon" type="image/x-icon">
+    <link href="./assets/images/logo/favicon.webp" rel="apple-touch-icon">
     <link rel="canonical" href="https://barefoot.org.in/course_selection.html">
     <link rel="preload" href="./assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
@@ -45,7 +45,7 @@
         <div data-animation="default" class="navbar-component w-nav" data-easing2="ease" data-easing="ease"
         data-collapse="medium" data-w-id="b5b2d9d7-2af2-6f75-a555-fe5bdc5e6c5c" role="banner" data-duration="400">
         <div class="navbar-container"><a href="#Hero" class="brand w-nav-brand"><img
-                    src="./assets/images/logo/logo1.png" loading="lazy" alt="barefoot Logo" class="logo"></a>
+                    src="./assets/images/logo/logo1.webp" loading="lazy" alt="barefoot Logo" class="logo"></a>
             <nav role="navigation" class="nav-menu w-nav-menu"><a href="#Hero"
                     class="nav nav-text-small background-color-dark text-color-white w-nav-link">Home</a>
                 <a href="#Coach" class="nav nav-text-small background-color-dark text-color-white w-nav-link">Coach</a>
