Shipping & Delivery Policy

--- a/index.html
+++ b/index.html
@@ -2497,7 +2497,8 @@
                 <div class="space-medium"></div>
                 <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b2f-de738b10" class="footer-detail">
                     <div data-w-id="9d1109b9-b588-7def-521e-134bde738b36" class="contact-detail-div">
-                        <img src="./assets/images/icons/phone.webp" loading="lazy" alt="Phone Icon" class="contact-icon">
+                        <img src="./assets/images/icons/phone.webp" loading="lazy" alt="Phone Icon"
+                            class="contact-icon">
                         <div class="paragraph">
                             <a href="tel:+91-7024596965" class="number-contact"> +91-7024596965</a>, <a
                                 class="number-contact" href="tel:+91-8608444444">
@@ -2752,14 +2753,14 @@
                     <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b26-de738b10" class="footer-detail">
                         <h6 data-w-id="9d1109b9-b588-7def-521e-134bde738b27" class="h6-heading footer-heading">
                             Other</h6>
-                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./terms-conditions.html"
-                            class="paragraph footer-link">Terms & Conditions</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./privacy-policy.html"
                             class="paragraph footer-link">Privacy Policy</a>
-                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./disclaimer.html"
-                            class="paragraph footer-link">Disclaimer</a>
+                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./terms-conditions.html"
+                            class="paragraph footer-link">Terms & Conditions</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./refund-cancellation.html"
                             class="paragraph footer-link">Refund & Cancellation</a>
+                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./shipping-delivery.html"
+                            class="paragraph footer-link">Shipping & Delivery</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b2d" href="./sitemap.html"
                             class="paragraph footer-link">Site Map</a>
                     </div>
