--- a/sitemap.html
+++ b/sitemap.html
@@ -135,14 +135,14 @@
                     <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b26-de738b10" class="footer-detail">
                         <h6 data-w-id="9d1109b9-b588-7def-521e-134bde738b27" class="h6-heading footer-heading">
                             Other</h6>
-                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./terms-conditions.html"
-                            class="paragraph footer-link">Terms & Conditions</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./privacy-policy.html"
                             class="paragraph footer-link">Privacy Policy</a>
-                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./disclaimer.html"
-                            class="paragraph footer-link">Disclaimer</a>
+                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./terms-conditions.html"
+                            class="paragraph footer-link">Terms & Conditions</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./refund-cancellation.html"
                             class="paragraph footer-link">Refund & Cancellation</a>
+                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./shipping-delivery.html"
+                            class="paragraph footer-link">Shipping & Delivery</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b2d" href="./sitemap.html"
                             class="paragraph footer-link">Site Map</a>
                     </div>
