--- a/shipping-delivery.html
+++ b/shipping-delivery.html
@@ -148,7 +148,7 @@
                         <div class="space-large"></div>
                         <div class="cta-container">
                             <a href="./index.html#Register" data-w-id="1b7b1925-189d-7b44-6e18-db85ada277ff"
-                                class="cta text-small background-color-purple w-button">Register Now</a>
+                            class="cta text-small background-color-purple w-button">Register Now</a>
                         </div>
                     </div>
                     <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b19-de738b10" class="footer-detail">
@@ -183,7 +183,7 @@
                         <h6 data-w-id="9d1109b9-b588-7def-521e-134bde738b30" class="h6-heading footer-heading">
                             Contact us</h6>
                         <div data-w-id="9d1109b9-b588-7def-521e-134bde738b32" class="contact-detail-div">
-                            <img src="./assets/images/icons/location.svg" loading="lazy" alt="Loactin Image"
+                            <img src="./assets/images/icons/location.webp" loading="lazy" alt="Loactin Image"
                                 class="contact-icon">
                             <div class="paragraph">
                                 <a href="https://www.google.com/maps/dir/21.2576144,81.6369656/Barefoot+MMA+and+Kick+Boxing/@21.2483682,81.6322387,14z/data=!3m1!4b1!4m10!4m9!1m1!4e1!1m5!1m1!1s0x3a28ddbe79b3a185:0xa90c5d09cf4a46cf!2m2!1d81.6694!2d21.2406566!3e9?entry=ttu&g_ep=EgoyMDI0MDkxOC4xIKXMDSoASAFQAw%3D%3D"
@@ -195,7 +195,7 @@
                             </div>
                         </div>
                         <div data-w-id="9d1109b9-b588-7def-521e-134bde738b36" class="contact-detail-div">
-                            <img src="./assets/images/icons/phone.svg" loading="lazy" alt="Phone Image"
+                            <img src="./assets/images/icons/phone.webp" loading="lazy" alt="Phone Image"
                                 class="contact-icon">
                             <div class="paragraph">
                                 <a href="tel:+91-7024596965"> +91-7024596965</a>, <a href="tel:+91-8608444444">
@@ -203,7 +203,7 @@
                             </div>
                         </div>
                         <div data-w-id="9d1109b9-b588-7def-521e-134bde738b3a" class="contact-detail-div">
-                            <img src="./assets/images/icons/mail.svg" loading="lazy" alt="Mail Image"
+                            <img src="./assets/images/icons/mail.webp" loading="lazy" alt="Mail Image"
                                 class="contact-icon">
                             <div class="paragraph">
                                 <a target="_blank" href="mailto:barefootraipur@gmail.com">barefootraipur@gmail.com</a>
@@ -211,13 +211,13 @@
                         </div>
                         <div class="footer-social-icons">
                             <a href="https://www.facebook.com/barefootraipur" target="_blank" class="social-icons">
-                                <img src="./assets/images/icons/facebook.svg" alt="Facebook Image">
+                                <img src="./assets/images/icons/facebook.webp" alt="Facebook Image">
                             </a>
                             <a href="https://www.instagram.com/barefoot_raipur/" target="_blank" class="social-icons">
-                                <img src="./assets/images/icons/instagram.svg" alt="instagram Image">
+                                <img src="./assets/images/icons/instagram.webp" alt="instagram Image">
                             </a>
                             <a href="https://wa.me/9109850895" target="_blank" class="social-icons">
-                                <img src="./assets/images/icons/whatsapp.svg" alt="Whatsapp Image">
+                                <img src="./assets/images/icons/whatsapp.webp" alt="Whatsapp Image">
                             </a>
                         </div>
                     </div>
