--- a/shipping-delivery.html
+++ b/shipping-delivery.html
@@ -54,9 +54,11 @@
                     class="nav nav-text-small background-color-dark text-color-white w-nav-link">Course</a>
                 <a href="./index.html#Price"
                     class="nav nav-text-small background-color-dark text-color-white w-nav-link">Price</a>
+                <a href="./index.html#Schedule"
+                    class="nav nav-text-small background-color-dark text-color-white w-nav-link">Schedule</a>
                 <a href="./index.html#WhyUs"
                     class="nav nav-text-small background-color-dark text-color-white w-nav-link">Why Us</a>
-                <a href="./index.html#Register"
+                <a href="./register.html"
                     class="nav nav-text-small background-color-dark text-color-white last-nav-button w-nav-link">Register</a>
                 <a href="./index.html#Contact"
                     class="nav nav-text-small background-color-dark text-color-white last-nav-button w-nav-link">Contact</a>
@@ -147,8 +149,8 @@
                             defend themselves in realworld situations. </p>
                         <div class="space-large"></div>
                         <div class="cta-container">
-                            <a href="./index.html#Register" data-w-id="1b7b1925-189d-7b44-6e18-db85ada277ff"
-                            class="cta text-small background-color-purple w-button">Register Now</a>
+                            <a href="./register.html" data-w-id="1b7b1925-189d-7b44-6e18-db85ada277ff"
+                                class="cta text-small background-color-purple w-button">Register Now</a>
                         </div>
                     </div>
                     <div id="w-node-_9d1109b9-b588-7def-521e-134bde738b19-de738b10" class="footer-detail">
@@ -160,6 +162,8 @@
                             class="paragraph footer-link">Course</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b22" href="./index.html#Price"
                             class="paragraph footer-link">Price</a>
+                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b22" href="#Schedule"
+                            class="paragraph footer-link">Schedule</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b22" href="./index.html#WhyUs"
                             class="paragraph footer-link">Why Us</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b22" href="./index.html#Contact"
@@ -172,7 +176,7 @@
                             class="paragraph footer-link">Privacy Policy</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./terms-conditions.html"
                             class="paragraph footer-link">Terms & Conditions</a>
-                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./refund-cancellation.html"
+                        <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./register.html"
                             class="paragraph footer-link">Refund & Cancellation</a>
                         <a data-w-id="9d1109b9-b588-7def-521e-134bde738b29" href="./shipping-delivery.html"
                             class="paragraph footer-link">Shipping & Delivery</a>
