--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
             </div>
         </div>
     </section>
-    <section id="Timetable" class="location-section background-color-dark section">
+    <section id="Schedule" class="location-section background-color-dark section">
         <div class="padding-large-global padding-top-large-xl padding-bottom-medium">
             <div class="w-layout-hflex flex-horizontal-block">
                 <div class="location-gym-info-wrapper">
@@ -2180,7 +2180,7 @@
         </div>
         </div>
     </section>
-    <section id="Location" class="location-section background-color-dark">
+    <section id="Location_Section" class="location-section background-color-dark">
         <div class="padding-large-global padding-top-large-xl padding-bottom-medium">
             <div class="w-layout-hflex flex-horizontal-block">
                 <div class="location-gym-info-wrapper">
@@ -2493,9 +2493,10 @@
                                         <option value="Referral">Referral</option>
                                         <option value="Others">Others</option>
                                     </select>
-                                    <input type="submit" class="common-button w-button" value="Register Now"
+                                    <input type="button" class="common-button w-button" value="Register Now"
                                         onclick="showPaymentDiv();">
                                 </div>
+                                <div id="error-message" style="color: red; display: none; margin-top: 15px;"></div>
 
                                 <div id="Payment-div" style="display: none;">
                                     <label for="select-course">Select Your Course</label>
@@ -2905,6 +2906,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=661a163a5f85c8b219e84a9e"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
+    <script src="./assets/js/script.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -2918,7 +2920,31 @@
             }
         });
     </script>
-    <script src="./assets/js/script.js" type="text/javascript"></script>
+    <script>
+        function showPaymentDiv() {
+            const errorMessageDiv = document.getElementById("error-message");
+
+            const fullName = document.getElementById("Full-Name").value.trim();
+            const age = document.getElementById("Age").value.trim();
+            const email = document.getElementById("Email-Address").value.trim();
+            const contactNumber = document.getElementById("Contact-Number").value.trim();
+            const gender = document.getElementById("Gender").value;
+            const location = document.getElementById("Location").value.trim();
+            const attendClass = document.getElementById("attend-class").value;
+            const aboutUs = document.getElementById("about-us").value;
+
+            if (fullName === "" || age === "" || email === "" || contactNumber === "" || gender === "" || location === "" || attendClass === "" || aboutUs === "") {
+                errorMessageDiv.style.display = "block";
+                errorMessageDiv.textContent = "Please fill out all required fields before proceeding to payment.";
+                return;  
+            }
+
+            errorMessageDiv.style.display = "none";
+
+            document.getElementById('Register-div').style.display = 'none'; 
+            document.getElementById('Payment-div').style.display = 'block'; 
+        }
+    </script>
     <script>
         // Contact Form submission
         document.getElementById('Contact-form').addEventListener('submit', function (event) {
@@ -2954,13 +2980,7 @@
         });
 
     </script>
-    <script>
-        function showPaymentDiv() {
-            // Hide Register-div and show Payment-div
-            document.getElementById('Register-div').style.display = 'none'; // Optionally hide the register div
-            document.getElementById('Payment-div').style.display = 'block'; // Show the payment div
-        }
-    </script>
+
 </body>
 
 </html>
